--- a/package.json
+++ b/package.json
@@ -69,10 +69,11 @@
     "msw": "^0.38.1",
     "prettier": "^2.5.1",
     "style-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2",
     "yarn": "^1.22.17"
