--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev_build": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --config webpack.dev.config.js",
     "test": "jest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prepare": "husky install && npx husky set .husky/pre-commit \"yarn lint --fix\""
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -58,16 +59,15 @@
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^5.0.5",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "msw": "^0.38.1",
-    "prettier": "^2.6.2",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.68.0",
