--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "msw": "^0.38.1",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.3.1",
+    "node-fetch": "^3.2.4",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
