--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev_build": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --config webpack.dev.config.js",
     "test": "jest",
+    "e2e": "cypress open --config-file tests/e2e/cypress.json",
     "lint": "eslint .",
     "prepare": "husky install && npx husky set .husky/pre-commit \"yarn lint --fix\""
   },
@@ -40,6 +41,8 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@cypress/react": "^5.12.5",
+    "@cypress/webpack-dev-server": "^1.8.4",
     "@emotion/babel-plugin": "^11.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -53,8 +56,10 @@
     "clean-html": "^1.5.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
+    "cypress": "^9.6.1",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-jest-dom": "^4.0.1",
