--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,8 +9,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,4 +25,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
     - run: yarn dev_build
-    - run: yarn test
+    - run: yarn test:unit
+
