testing - cypress task - yarn start - not yarn run!

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -44,5 +44,5 @@ jobs:
             start: |
               yarn install 
               yarn dev_build
-              yarn run
+              yarn start
             wait-on: 'http://localhost:8080'
