--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "webpack --config webpack.prod.config.js",
     "dev_build": "webpack --config webpack.dev.config.js",
     "start": "webpack serve --config webpack.dev.config.js",
-    "test:unit": "jest",
-    "test:e2e": "cypress run --config-file tests/e2e/cypress.json",
+    "test:unit": "jest src",
+    "test:e2e": "cypress run --project tests/e2e",
     "lint": "eslint .",
     "prepare": "husky install && npx husky set .husky/pre-commit \"yarn lint --fix\""
   },
@@ -56,7 +56,7 @@
     "clean-html": "^1.5.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
-    "cypress": "^9.6.1",
+    "cypress": "^9.7.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-cypress": "^2.12.1",
