Add Cypress e2e tests, and add to Github CI
* Add Cypress for e2e tests

* Add Cypress for e2e tests - work in progress

* Add Cypress for e2e tests - work in progress

* rename github action and rename appropriately

* add e2e test to assert a new game detail page shows up, and change package.json scripts targets.

* update yarn command to run unit tests ( test:unit )

* Improve page navigation test

* testing - cypress task

* testing - cypress task - yarn start - not yarn run!

* testing - cypress task - fixes / eslint ignore build directory

* remove yarn test:e2e from action - cypress should run itself, update cypress to 9.7, update cypress.json to run as a project.

* test / add missing files

* add missing files / fix linting...

* clean up action

* clean up action

* Delete unwanted files, clean up.

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "ignorePatterns": ["*.test.js"],
+  "ignorePatterns": ["*.test.js", "tests/e2e/**", "dist/**"],
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
@@ -105,20 +105,23 @@
   },
   "overrides": [
     {
-      "env": {
-        "jest": true
-      },
       "extends": [
         "plugin:jest/recommended",
         "plugin:jest/style",
         "plugin:jest-dom/recommended",
         "plugin:testing-library/react"
       ],
-      "files": "**/*.test.js",
+      "files": "src/**/*.test.js",
       "plugins": [
         "jest",
         "testing-library"
       ]
+    },
+    {
+      "extends": [
+        "plugin:cypress/recommended"
+      ],
+      "files": "tests/e2e/suites/**/*.js"
     }
   ]
 }
