--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Build app
-        run: yarn test:unit
+      - name: Build app ( development build )
+        run: yarn dev_build
 
       - name: Run Unit tests
         run: yarn test:unit
