Remove spinners-react package

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-json-pretty": "^2.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^6.2.1",
-    "redux-devtools": "^3.7.0",
-    "spinners-react": "^1.0.7"
+    "redux-devtools": "^3.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
