--- a/package.json
+++ b/package.json
@@ -14,40 +14,39 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.4.1",
-    "@mui/styled-engine": "^5.4.1",
-    "@reduxjs/toolkit": "^1.7.2",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "@mui/styled-engine": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
-    "nanoid": "^3.1.23",
+    "nanoid": "^3.3.4",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-error-boundary": "^3.1.1",
-    "react-hook-form": "^7.26.1",
+    "react-hook-form": "^7.31.2",
     "react-json-pretty": "^2.2.0",
-    "react-redux": "^7.2.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "redux-devtools": "^3.7.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
+    "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/node": "^7.16.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/node": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@cypress/react": "^5.12.5",
     "@cypress/webpack-dev-server": "^1.8.4",
-    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/babel-plugin": "^11.9.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.3",
+    "babel-jest": "^28.1.0",
+    "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -56,27 +55,28 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
     "cypress": "^9.7.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^26.1.0",
-    "eslint-plugin-jest-dom": "^4.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-testing-library": "^5.0.5",
+    "eslint-plugin-testing-library": "^5.5.1",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^8.0.1",
-    "jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "less": "^4.1.1",
-    "less-loader": "^10.0.1",
-    "msw": "^0.38.1",
+    "less-loader": "^11.0.0",
+    "msw": "^0.41.0",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.68.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
+    "webpack-dev-server": "^4.9.0",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2",
