--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 16.4.2
+      - name: Use project Node version
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
