--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:unit": "jest src",
     "test:e2e": "cypress run --project tests/e2e",
     "lint": "eslint .",
-    "prepare": "husky install && npx husky set .husky/pre-commit \"yarn lint --fix\""
+    "prepare": "husky install && npx husky set .husky/pre-commit \"yarn lint --fix\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -42,6 +44,16 @@
     "@cypress/react": "^5.12.5",
     "@cypress/webpack-dev-server": "^1.8.4",
     "@emotion/babel-plugin": "^11.9.2",
+    "@react-theming/storybook-addon": "^1.1.6",
+    "@storybook/addon-actions": "^6.5.8",
+    "@storybook/addon-docs": "^6.5.8",
+    "@storybook/addon-essentials": "^6.5.8",
+    "@storybook/addon-interactions": "^6.5.8",
+    "@storybook/addon-links": "^6.5.8",
+    "@storybook/builder-webpack5": "^6.5.8",
+    "@storybook/manager-webpack5": "^6.5.8",
+    "@storybook/react": "^6.5.8",
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -67,11 +79,14 @@
     "eslint-plugin-testing-library": "^5.5.1",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^8.0.1",
+    "install": "^0.13.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "less": "^4.1.1",
     "less-loader": "^11.0.0",
     "msw": "^0.42.0",
+    "npm": "^8.12.1",
+    "storybook-addon-material-ui5": "^1.0.0",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.72.1",
