--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+!/.yarn/
 **/.DS_Store
-node_modules/
-/.cache/
-/.idea/
-/dist/
-/.git/
-/.yarn/
 .husky
-/yarn-error.log
+/.cache/
+/.git/
+/.idea/
+/.yarn/
+/dist/
 /tests/e2e/videos/**
+/yarn-error.log
+node_modules/
